labs/11-k8s-basics-network-policies/01-bb-services-none-ClusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: bb1
spec:
  ports:
  - port: 8888
  selector:
    run: bb1
  clusterIP: None

---
apiVersion: v1
kind: Service
metadata:
  name: bb2
spec:
  ports:
  - port: 8888
  selector:
    run: bb1
  clusterIP: None
