labs/11-k8s-basics-network-policies/05-flaskback-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskback
  labels:
    app: flaskback
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskback
  template:
    metadata:
      labels:
        app: flaskback
        tier: backend
    spec:
      containers:
        - name: flaskback
          image: pnivaggi/flaskback
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flaskback
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: flaskback
  clusterIP: None
