labs/11-k8s-basics-network-policies/06-mysqldb-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: mysqldb
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: mysqldb
  ingress:
  - from:
    - podSelector:
        matchLabels:
          tier: backend
    ports:
      - protocol: TCP
        port: 3306
  egress:
    - to: []
